--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,30 @@
 
 /* Your CSS Code here. */
+#grid1{
+	display:grid;
+	grid-template-columns: repeat(12,1fr);
+	gap:10px;
+	
+}
+
+#grid2{
+	display:grid;
+	grid-template-columns: repeat(6,2fr);
+	gap:10px;
+}
+
+#grid3{
+	display:grid;
+	grid-template-columns: repeat(3,4fr);
+	gap:10px;
+}
+
+#grid4{
+	display:grid;
+	grid-template-columns: repeat(1,12fr);
+}
+
+img{
+	width:100%;
+	height:100%;
+}
